@@ -46,7 +46,6 @@ import java.awt.Dimension;
 import java.awt.Graphics;
 import java.awt.LayoutManager;
 import java.awt.event.KeyEvent;
-import java.awt.event.WindowEvent;
 
 import javax.accessibility.AccessibleContext;
 
