@@ -43,8 +43,6 @@ import java.io.Serializable;
 import java.text.Format;
 import java.text.ParseException;
 
-import javax.swing.event.DocumentEvent;
-import javax.swing.event.DocumentListener;
 import javax.swing.text.Document;
 import javax.swing.text.DocumentFilter;
 import javax.swing.text.NavigationFilter;
